--- a/otp/index.html
+++ b/otp/index.html
@@ -80,9 +80,10 @@
       height: 70px;
       font-size: 2.5em;
       text-align: center;
+      font-family: "Inter", sans-serif;
       font-weight: bold;
       letter-spacing: 5px;
-      color: #00ff00;
+      color: mediumspringgreen;
       background-color: #1e1e1e;
       border: none;
     }
